tests/syntactic/syntax9/syntax9.err
Error: syntax error, unexpected identifier, expecting ) or "," in file syntax9.dl at line 3
.decl Reachable   (a:N x b:N)
-----------------------^------
1 errors generated, evaluation aborted
